@@ -1,3 +1,10 @@
+Thu May 03 18:28:04 2001  George Lebl <jirka@5z.com>
+
+	* gui/Makefile.am, gui/gdmchooser.c, gui/gdmlogin.c, gui/gdmconfig.c,
+	  gui/misc.[ch]:  Add a misc functions file and add
+	  strcasecmp_no_locale and use it.  Without this we fail in all kinds
+	  of wird locale (like iso -9)
+
 Thu May 03 17:13:23 2001  George Lebl <jirka@5z.com>
 
 	* gui/gdmconfig.c, gui/gdmchooser.c:  Use DOING_GDM_DEVELOPMENT env
